k8s/canary/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-v2
  namespace: canary-demo
  labels:
    app: canary-demo
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-demo
      track: canary
  template:
    metadata:
      labels:
        app: canary-demo
        track: canary
    spec:
      nodeSelector:
        workload: user
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: canary-content-canary
