k8s/canary/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-stable
  namespace: canary-demo
  labels:
    app: canary-demo
    track: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-demo
      track: stable
  template:
    metadata:
      labels:
        app: canary-demo
        track: stable
    spec:
      nodeSelector:
        workload: user
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: canary-content-stable
