k8s/canary/deployment-viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-viewer
  namespace: canary-demo
  labels:
    app: canary-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-viewer
  template:
    metadata:
      labels:
        app: canary-viewer
    spec:
      nodeSelector:
        workload: user
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: viewer-content
              mountPath: /usr/share/nginx/html/viewer/index.html
              subPath: index.html
      volumes:
        - name: viewer-content
          configMap:
            name: canary-viewer-content
