k8s/canary/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-v2
  namespace: canary-demo
  labels:
    app: canary-demo
    track: canary
spec:
  type: ClusterIP
  selector:
    app: canary-demo
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 80
