k8s/canary/service-viewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-viewer
  namespace: canary-demo
  labels:
    app: canary-viewer
spec:
  type: ClusterIP
  selector:
    app: canary-viewer
  ports:
    - name: http
      port: 80
      targetPort: 80
